--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ CI_ENVIRONMENT = development
 # APP
 #--------------------------------------------------------------------
 
-app.baseURL = 'http://localhost/pita/public/'
+app.baseURL = 'http://localhost:8012/pita/public/'
 # app.forceGlobalSecureRequests = false
 
 app.sessionDriver = 'CodeIgniter\Session\Handlers\FileHandler'
